# AirOpsUpSkill

./: .gitignore  README.md  process_tree.json  process_tree.yaml  run_be_faq.sh  run_fe_faq.sh  visualize.py
CreateFAQ/: README.md
CreateFAQ/backend/: .env  pyproject.toml
CreateFAQ/backend/app/: db.py  main.py  structured_llm_output.py  synthetic_data_generation.py
CreateFAQ/backend/app/routers/: faq.py  jobs.py
CreateFAQ/backend/app/services/: clustering.py  embeddings.py  synthetic_data_generation.py
CreateFAQ/backend/workflows/: FAQ_storage_flow.sh
CreateFAQ/docs/: CreateFAQ.md
CreateFAQ/frontend/: package-lock.json  package.json  tailwind.config.js
CreateFAQ/frontend/src/: App.css  App.jsx  BackgroundEffect.css
CreateFAQ/frontend/src/components/: FAQCard.jsx  FAQList.jsx  SearchBar.jsx
ProcessGraph/backend/: pyproject.toml
ProcessGraph/backend/MockData/: Unique_First-Person_Video_Transcripts_for_Mini_Cooper_2015_Oil_Change.csv
ProcessGraph/backend/Prompts/: prompts.json
ProcessGraph/backend/Services/: process-graph.py  tools.py  yaml.py
ProcessGraph/task-navigator/: package-lock.json  package.json
ProcessGraph/task-navigator/src/: App.css  App.js  index.css
ProcessGraph/task-navigator/src/components/: FileUploader.js  GraphView.js  InteractiveList.js  ProgressBar.js  TaskDetails.js  TaskListView.js  TreeView.js
ProcessGraph/task-navigator/src/utils/: buildNestedTree.js  cleanJson.js  transformJson.js
